@@ -2,6 +2,7 @@ package model;
 
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.List;
 
 public abstract class Baralho {
     protected ArrayList<Carta> cartas;
@@ -18,13 +19,18 @@ public abstract class Baralho {
     }
 
     public Carta comprarCarta(){
-        Carta c = cartas.get(0);
-        cartas.remove(0);
+        Carta c = cartas.getFirst();
+        cartas.removeFirst();
         return c;
     }
 
     public boolean temCartas(){
         return !cartas.isEmpty();
+    }
+
+    public void reabastecer(List<Carta> descartadas){
+        this.cartas.addAll(descartadas);
+        embaralhar();
     }
 
 }
